# pyalex

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.md  _typos.toml  pyproject.toml  test.py
.github/workflows/: fix-typos.yaml  python-lint.yml  python-package.yml  python-publish.yml  scorecard.yml
openalex/: __init__.py  _version.py  api.py
pyalex/: __init__.py  __main__.py  _version.py  api.py
tests/: test_openalex.py  test_paging.py  test_pyalex.py  test_ratelimit.py
