[project]
name = "pyalex"
description = "Python interface to the OpenAlex database"
authors = [
    { name = "Jonathan de Bruin", email = "jonathandebruinos@gmail.com" }
]
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
license = {text = "MIT"}
dependencies = ["requests"]
dynamic = ["version"]
requires-python = ">=3.6"

[project.optional-dependencies]
lint = ["flake8", "flake8-import-order"]
test = ["pytest"]

[build-system]
build-backend = 'setuptools.build_meta'
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[tool.setuptools]
packages = ["pyalex"]

[tool.setuptools_scm]
write_to = "pyalex/_version.py"

[tool.ruff]
select = ["E", "F", "UP", "I", "B"]

[tool.ruff.isort]
force-single-line = true
